[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rollio-airbot-play"
version = "0.1.0"
description = "AIRBOT Play Rollio driver"
requires-python = ">=3.10"
dependencies = [
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
rollio-robot-airbot-play = "rollio_airbot_play.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
