[package]
name = "rollio-device-pseudo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rollio-device-pseudo"
path = "src/bin/device.rs"

[dependencies]
rollio-bus = { path = "../../rollio-bus" }
rollio-types = { path = "../../rollio-types" }
iceoryx2 = { path = "../../third_party/iceoryx2/iceoryx2" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"

[dev-dependencies]
toml = { version = "0.8", features = ["parse", "display"] }
