[package]
name = "rollio-storage-dataloop"
version = "1.0.0"
edition = "2021"
links = "dataloop"

[[bin]]
name = "rollio-storage-dataloop"
path = "src/main.rs"

[dependencies]
rollio-types = { path = "../../rollio-types" }
iceoryx2 = { path = "../../third_party/iceoryx2/iceoryx2" }
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
rollio-bus = { version = "1.0.0", path = "../../rollio-bus" }

[dev-dependencies]
tempfile = "3.10"
