[package]
name = "rollio-bus-tap"
version = "0.1.0"
edition = "2021"

[dependencies]
rollio-bus = { path = "../../rollio-bus" }
rollio-types = { path = "../../rollio-types" }
iceoryx2 = { path = "../../third_party/iceoryx2/iceoryx2" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
