[package]
name = "rollio-test-robot-keyboard"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
iceoryx2 = { version = "0.8.999", path = "../../third_party/iceoryx2/iceoryx2" }
rollio-bus = { version = "0.1.0", path = "../../rollio-bus" }
rollio-types = { version = "0.1.0", path = "../../rollio-types" }

[dev-dependencies]
rollio-robot-pseudo = { path = "../../robots/pseudo" }
toml = { version = "0.8", features = ["parse", "display"] }
